[tool.poetry]
name = "langchain-tools-nicovideo"
version = "0.0.0"
description = "Wrapper to make Nicovideo search API available from Langchain."
authors = ["Javakky <iemura.java@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_tools_nicovideo"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.222"
nicovideo-api-client = "^2.0.4"
tiktoken = "^0.3.3"
html2text = "^2020.1.16"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
taskipy = "^1.10.4"
black = "^23.3.0"
pyproject-flake8 = "^6.0.0.post1"
openai = "^0.27.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,E402,"
max-complexity = 10

[tool.black]
line-length = 88

[tool.taskipy.tasks]
test = "pytest tests"
lint = "poetry run pflake8 langchain_tools_nicovideo tests"
format = "poetry run black langchain_tools_nicovideo tests"
